Add home and responsive menu

--- a/partials/__footer.html
+++ b/partials/__footer.html
@@ -1,3 +1,154 @@
 <footer class="footer">
-   
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-lg-2">
+                <ul class="footer__links">
+                    <li class="title">
+                        O IBER
+                    </li>
+                    <li>
+                        <a href="#">
+                            Diretoria
+                        </a>
+                        <a href="#">
+                            Estrutura
+                        </a>
+                        <a href="#">
+                            Onde Atuamos
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-6 col-lg-2">
+                <ul class="footer__links">
+                    <li class="title">
+                        Serviços
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Selo IBER
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Plano de associação
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Declaração de Adesão
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Certificação PNRS
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Atendimento
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Representividade
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-6 col-lg-2">
+                <ul class="footer__links">
+                    <li class="title" style="opacity: 0">
+                        .
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            MTR
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Cadri
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Estatísticas do setor
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            APP Varejo
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Plataforma de Gestão /
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-underline">
+                            Relatórios
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-6 col-lg-2">
+                <ul class="footer__links">
+                    <li class="title">
+                        Outros
+                    </li>
+                    <li>
+                        <a href="#">
+                            Parceiros
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Associados
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Legislação
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Eventos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Blog
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Contato
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="footer__right">
+                <a href="#" class="text-uppercase">
+                    Validar certificado/selo
+                </a>
+
+                <a href="#" class="btn-primary">
+                    Solicitar a destinação
+                </a>
+                <a href="#" class="btn-secondary">
+                    Área restrita
+                </a>
+
+                <p class="footer__copyright">
+                    © 2010-2019 - IBER Brasil - Todos os direitos reservados
+                </p>
+            </div>
+        </div>
+    </div>
 </footer>
