--- a/partials/__navbar.html
+++ b/partials/__navbar.html
@@ -1,3 +1,124 @@
-<nav id="main-nav" class="main-nav wow fadeInDown">
-    
+<header id="main-header" class="main-header">
+    <div class="container container--max">
+        <div class="main-header__left">
+            <p class="d-none d-xl-block">
+                Redes sociais
+            </p>
+            <p class="d-none d-md-block d-lg-none">
+                Redes sociais
+            </p>
+            <div class="socials">
+                <a href="#">
+                    <i class="fab fa-facebook-square"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-youtube-square"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+
+            <p>
+                <i class="fa fa-envelope color-primary"></i>
+                <a href="mailto:atendimento@iber.org.br" class="color-white">atendimento@iber.org.br</a>
+            </p>
+            <p>
+                <i class="fa fa-phone-square color-primary"></i>
+                <a href="tel:+153357-8700" class="color-white">
+                    15 3357-8700
+                </a>
+            </p>
+        </div>
+
+        <div class="main-header__right">
+            <a href="#" class="text-uppercase color-white d-block mr-3">
+                <small>
+                    Validar certificado/selo
+                </small>
+            </a>
+
+            <a href="#" class="btn-cprimary d-block mr-3">
+                Solicitar a destinação
+            </a>
+            <a href="#" class="btn-csecondary d-block ">
+                Área restrita
+            </a>
+        </div>
+    </div>
+</header>
+<nav id="main-nav" class="main-nav">
+
+    <div class="container container--max">
+        <div class="main-nav__brand">
+            <a href="#">
+                <img src="../images/brands/main.png" alt=""/>
+            </a>
+        </div>
+
+        <button
+            id="nav-toggler"
+            data-toggle="nav"
+            aria-expanded="false"
+            class="main-nav__toggler">
+            <div></div>
+            <div></div>
+            <div></div>
+        </button>
+
+        <div id="nav-content" class="main-nav__content">
+
+            <button
+                id="nav-close"
+                class="main-nav__close"
+                aria-expanded="false"
+                data-toggle="nav">
+                <i class="fa fa-times"></i>
+            </button>
+
+            <ul class="main-nav__links mb-4 mb-lg-0">
+                <li>
+                    <a href="#">O IBER</a>
+                </li>
+                <li>
+                    <a href="#">Serviços</a>
+                </li>
+                <li>
+                    <a href="#">Parceiros</a>
+                </li>
+                <li>
+                    <a href="#">Associados</a>
+                </li>
+                <li>
+                    <a href="#">Legislação</a>
+                </li>
+                <li>
+                    <a href="#">Eventos</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Contato</a>
+                </li>
+            </ul>
+
+            <!-- Mobile only -->
+            <ul class="d-flex flex-column align-items-center d-lg-none">
+                <a href="#" class="text-uppercase color-white d-block mb-2">
+                    <small>
+                        Validar certificado/selo
+                    </small>
+                </a>
+
+                <a href="#" class="btn-cprimary d-block mb-2">
+                    Solicitar a destinação
+                </a>
+                <a href="#" class="btn-cdark d-block ">
+                    Área restrita
+                </a>
+            </ul>
+        </div>
+    </div>
+
 </nav>
