--- a/scss/util/__typo.scss
+++ b/scss/util/__typo.scss
@@ -31,7 +31,7 @@
     color: $color-primary !important;
 }
 
-.color-white {
+.color-white{
     color: #fff !important;
 }
 
@@ -41,4 +41,8 @@
 
 .color-dark {
     color: $color-dark !important;
+}
+
+small{
+    font-size: 13px;
 }
