--- a/partials/__head.html
+++ b/partials/__head.html
@@ -31,8 +31,7 @@
 <meta property="fb:app_id" content="_app_id" />
 <meta name="twitter:site" content="@app">
 
-<!-- Load Font -->
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
 <!-- Vendor JS -->
 <script src="../vendors/js/vendor.bundle.base.js" defer></script>
