--- a/scss/components/UI/__main-header.scss
+++ b/scss/components/UI/__main-header.scss
@@ -1,2 +1,104 @@
 .main-header {
+    background-color: #2E2E2E;
+    padding: 13px 0;
+    height: 60px;
+    letter-spacing: 0.2px;
+    width: 100%;
+    z-index: 9;
+
+    @media screen and (max-width: $bp-LG) {
+        font-size: 13px;
+        height: 50px;
+    }
+
+    p {
+        white-space: nowrap;
+        margin-bottom: 0 !important;
+    }
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+    }
+
+    &__left,
+    &__right {
+        display: flex;
+        align-items: center;
+    }
+
+    &__right {
+        @media screen and (max-width: $bp-LG) {
+            display: none;
+        }
+    }
+
+    &__left {
+        color: #fff;
+        @media screen and (max-width: $bp-LG) {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+
+        p i {
+            margin-right: 1px;
+        }
+
+        a {
+            color: #fff !important;
+        }
+
+        p {
+            &:not(:last-child) {
+                margin-right: 20px;
+
+                @media screen and (max-width: $bp-LG) {
+                    margin-right: 20px;
+                }
+
+                @media screen and (max-width: $bp-MD) {
+                    margin-right: 10px;
+                }
+                
+            }
+
+        }
+
+        .socials {
+            display: flex;
+            white-space: nowrap;
+            padding-left: 15px;
+            padding-right: 40px;
+            margin-top: 4px;
+
+            @media screen and (max-width: $bp-MD) {
+                order: 4;
+                padding-left: 9px;
+                padding-right: 0;
+            }
+
+            @media screen and (max-width: $bp-LG) {
+                padding-right: 18px;
+                padding-left: 6px;
+            }
+
+            i {
+                font-size: 21px;
+                margin-right: 8px;
+
+                @media screen and (max-width: $bp-LG) {
+                    margin-right: 5px;
+                    font-size: 17px;
+                }
+            }
+        }
+    }
+
+    &.sticky {
+        position: fixed;
+        animation: fadeInDown 0.4s;
+    }
 }
