--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,8 +17,7 @@
 body {
     position: relative;
     margin: 0;
-    background-color: #383838;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto', sans-serif;
     max-width: 100vw;
     overflow-x: hidden;
     font-size: 16px;
