--- a/scss/util/__trumps.scss
+++ b/scss/util/__trumps.scss
@@ -1,13 +1,5 @@
 .container--max {
-    padding: 0 80px;
-
-    @media screen and(max-width: 992px) {
-        padding: 0 40px;
-    }
-
-    @media screen and(max-width: 768px) {
-        padding: 0 20px;
-    }
+    max-width: 1450px !important;
 }
 
 .object-cover {
@@ -23,6 +15,7 @@
     max-height: 60px;
     object-fit: contain;
 }
+
 .container{
     @media screen and (min-width: $bp-MD){
         max-width: 940px;
