--- a/scss/variables/__colors.scss
+++ b/scss/variables/__colors.scss
@@ -1,10 +1,6 @@
-$color-primary: #E1941B;
-$color-secondary: #414292;
+$color-primary: #7DA04C;
+$color-secondary: #30959F;
 
-$color-blue: #C6D6E7;
-$color-pink: #F1DBD8;
-$color-pink-l: #FBF8F5;
+$color-yellow: #FECB48;
 
-$color-dark: #383838;
-$color-lighter: #E2E2E2;
-$color-light: #F4F4F4;
+$color-dark: #707070;
