--- a/partials/__navbar.html
+++ b/partials/__navbar.html
@@ -38,10 +38,10 @@
                 </small>
             </a>
 
-            <a href="#" class="btn-cprimary d-block mr-3">
+            <a href="#" class="btn-cprimary py-1 d-block mr-3">
                 Solicitar a destinação
             </a>
-            <a href="#" class="btn-csecondary d-block ">
+            <a href="#" class="btn-csecondary py-1 d-block ">
                 Área restrita
             </a>
         </div>
@@ -111,10 +111,10 @@
                     </small>
                 </a>
 
-                <a href="#" class="btn-cprimary d-block mb-2">
+                <a href="#" class="btn-cprimary py-1 d-block mb-2">
                     Solicitar a destinação
                 </a>
-                <a href="#" class="btn-cdark d-block ">
+                <a href="#" class="btn-cdark py-1 d-block ">
                     Área restrita
                 </a>
             </ul>
