--- a/scss/components/UI/__buttons.scss
+++ b/scss/components/UI/__buttons.scss
@@ -1,7 +1,7 @@
 .btn-cprimary{
     font-family: 'Helvetica Neue', sans-serif;
     border-radius: 4px;
-    padding: 4.6px 18px;
+    padding: 13px 18px;
     background-color: #7DA04C;
     text-transform: uppercase;
     text-align: center;
@@ -18,7 +18,7 @@
 .btn-csecondary{
     font-family: 'Helvetica Neue', sans-serif;
     border-radius: 4px;
-    padding: 4.6px 18px;
+    padding: 13px 18px;
     background-color: $color-secondary;
     text-transform: uppercase;
     text-align: center;
@@ -35,7 +35,7 @@
 .btn-cdark{
     font-family: 'Helvetica Neue', sans-serif;
     border-radius: 4px;
-    padding: 4.6px 18px;
+    padding: 13px 18px;
     background-color: $color-dark;
     text-transform: uppercase;
     text-align: center;
@@ -49,6 +49,27 @@
     }
 }
 
+.btn-outline-white{
+    font-family: 'Helvetica Neue';
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #fff;
+    padding: 14px 50px;
+    color: #fff;
+    text-transform: uppercase;
+    border-radius: 4px;
+    @include transition();
+
+    @media screen and (max-width: $bp-XL){
+        padding: 10px 40px;
+    }
+
+    &:hover{
+        background-color: #fff;
+        color: $color-dark;
+    }
+}
 .btn-transparent{
     display: flex;
     align-items: center;
