--- a/scss/sections/__home-banner.scss
+++ b/scss/sections/__home-banner.scss
@@ -1,8 +1,9 @@
 .home-banner{
-    height: 96vh;
 
     &__caption{
         position: absolute;
+        top: 0;
+        pointer-events: none;
         opacity: 0;
     }
 
