--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,7 @@ body {
     overflow-x: hidden;
     font-size: 16px;
     font-weight: 400;
+    background-color: #fff;
     color: $color-dark;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
